--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Questease
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=aigle2430
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings (Optional)
