--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,42 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'org.sonarqube' version '4.0.0.2929'
+	id 'jacoco'
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "JAVATEST"
+		property "sonar.projectName", "JAVATEST"
+		property "sonar.sourceEncoding", "UTF-8"
+		property "sonar.host.url", "http://localhost:9000"
+
+		// Séparation claire des sources et des tests
+		property "sonar.sources", "src/main/java"
+		property "sonar.tests", "src/test/java"
+
+		property "sonar.token", "sqp_4e6da52669982cda99706f234dc2ace00e10c246"
+		// Intégration de JaCoCo pour la couverture de tests
+		property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+	}
+}
+
+jacoco {
+	toolVersion = "0.8.10"
+}
+
+tasks.named('test') {
+	useJUnitPlatform()
+	finalizedBy jacocoTestReport // Générer le rapport JaCoCo après les tests
+}
+
+jacocoTestReport {
+	dependsOn test
+	reports {
+		xml.required.set(true)  // SonarQube a besoin du rapport XML
+		html.required.set(true) // Rapport lisible dans `build/reports/jacoco/test/html/index.html`
+	}
 }
 
 group = 'fr.uphf'
